--- a/style.css
+++ b/style.css
@@ -1,20 +1,157 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+:root {
+    --text-color: white;
+    --bg-url: url(./assets/bg-mobile.jpg);
+    --stroke-color: rgba(255, 255, 255, 0.5);
+    --surface-color: rgba(255, 255, 255, 0.1);
+    --socialLink-hover: rgba(255, 255, 255, 0.2);
+    --switch-bg-url: url(./assets/moon-stars.svg);
+}
+
+.light {
+    --text-color: black;
+    --bg-url: url(./assets/bg-mobile-light.jpg);
+    --stroke-color: rgba(0, 0, 0, 0.5);
+    --surface-color: rgba(0, 0, 0, 0.05);
+    --socialLink-hover: rgb(0, 0, 0, 0.2);
+    --switch-bg-url: url(./assets/sun.svg);
+}
+
 body {
-    background-image: url(./assets/bg-mobile.jpg);
+    background-image: var(--bg-url);
     background-repeat: no-repeat;
     background-position: top center;
     background-size: cover;
+}
 
+body * {
+    font-family: 'Inter', sans-serif;
+    color: var(--text-color);
 }
 
 #container {
     width: 360px;
-    border: 1px solid red;
     margin: auto;
+    margin-top: 56px;
+    padding: 0 24px;
+}
+
+#profile {
+    text-align: center;
 }
 
 #profile img{
-    display: block;
     width: 112px;    
-    margin: auto;
+}
+
+#profile p {
+    font-weight: 500;
+    line-height: 24px;
+    padding: 10px;
+    padding-top: 0px;
+}
+
+/* SWITCH */
+#switch {
+    position: relative;
+    width: 66px;
+
+    margin: 4px auto;
+}
+#switch button {
+    width: 32px;
+    height: 32px;
+    background: white var(--switch-bg-url) no-repeat center;
+    border: 0;
+    border-radius: 50%;
+
+    position: absolute;
+    top: 50%;
+    left: 0;
+    z-index: 1;
+    transform: translateY(-50%);
+}
+
+.light #switch button {
+    right: 0;
+    left: initial;
+}
+
+#switch span {
+    display: block;
+    width: 64px;
+    height: 24px;
+    background: var(--surface-color);
+    border: 1px solid var(--stroke-color);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 9999px;
+}
+
+/* LINKS */
+ul {
+    margin-top: 10px;
+    list-style: none;
+    padding: 24px 0;
+}
+
+ul li a{
+    margin-top: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 52px;
+
+    border-radius: 8px;
+    background: var(--surface-color);
+    border: 1px solid var(--stroke-color);
+
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+
+    text-decoration: none;
+    font-weight: 500;
+
+    transition: background 0.3s;
+}
+
+ul li a:hover {
+    background: rgba(255, 255, 255, 0.5);
+    border: 2px solid var(--text-color);
+}
+
+/* Social LINKS*/
+#socialLinks {
+    display: flex;
+    justify-content: center;
+
+    padding: 24px 0;
+
+    font-size: 24px;
+}
+
+#socialLinks a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
+
+    transition: background 0.2s;
+    border-radius: 50%;
+}
+
+#socialLinks a:hover {
+    background: var(--socialLink-hover);
+}
+
+footer {
+    padding: 24px 0;
+    text-align: center;
+    font-size: 14px;
+
 }
 
