--- a/style.css
+++ b/style.css
@@ -34,9 +34,9 @@ body * {
 }
 
 #container {
-    width: 360px;
-    margin: auto;
-    margin-top: 56px;
+    width: 100%;
+    max-width: 588px;
+    margin: 56px auto 0;
     padding: 0 24px;
 }
 
