--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 :root {
     --text-color: white;
-    --bg-url: url(./assets/bg-mobile.jpg);
+    --bg-url: url(./assets/bg-desktop.jpg);
     --stroke-color: rgba(255, 255, 255, 0.5);
     --surface-color: rgba(255, 255, 255, 0.1);
     --socialLink-hover: rgba(255, 255, 255, 0.2);
@@ -14,7 +14,7 @@
 
 .light {
     --text-color: black;
-    --bg-url: url(./assets/bg-mobile-light.jpg);
+    --bg-url: url(./assets/bg-desktop-light.jpg);
     --stroke-color: rgba(0, 0, 0, 0.5);
     --surface-color: rgba(0, 0, 0, 0.05);
     --socialLink-hover: rgb(0, 0, 0, 0.2);
@@ -42,6 +42,7 @@ body * {
 
 #profile {
     text-align: center;
+    padding: 24px;
 }
 
 #profile img{
@@ -51,8 +52,7 @@ body * {
 #profile p {
     font-weight: 500;
     line-height: 24px;
-    padding: 10px;
-    padding-top: 0px;
+    padding-top: 8px;
 }
 
 /* SWITCH */
